--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.7",
+        "@tailwindcss/forms": "^0.5.2",
+        "autoprefixer": "10.4.5",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.13",
+        "postcss-import": "^14.1.0",
         "tailwindcss": "^3.0.24"
+    },
+    "dependencies": {
+        "alpinejs": "^3.10.2"
     }
 }
