--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,12 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+FACEBOOK_ID=
+FACEBOOK_SECRET=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
