--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
         "laravel/sanctum": "^2.14.1",
-        "laravel/tinker": "^2.7"
+        "laravel/socialite": "^5.5",
+        "laravel/tinker": "^2.7",
+        "socialiteproviders/facebook": "^4.1",
+        "socialiteproviders/google": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.12",
