--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "socialiteproviders/google": "^4.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.7",
         "barryvdh/laravel-ide-helper": "^2.12",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.9",
